--- a/style.css
+++ b/style.css
@@ -1,54 +1,78 @@
 body {
-    background: #eeefed;
+  background: #eeefed;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-    padding-top: 25px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  padding-top: 25px;
 }
 
 h1 {
-    position: relative;
-    text-align: center;
-    color: #353535;
-    font-size: 50px;
-    font-family: "Calibri", sans-serif;
+  position: relative;
+  text-align: center;
+  color: #353535;
+  font-size: 50px;
+  font-family: "Calibri", sans-serif;
 }
 
 p {
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    text-align: center;
-    font-size: 18px;
-    color: #676767;
-    margin-bottom: 40px;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  text-align: center;
+  font-size: 18px;
+  color: #676767;
+  margin-bottom: 40px;
 }
 
 .custom-btn {
-    width: 130px;
-    height: 40px;
-    color: #000;
-    border-radius: 5px;
-    padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 500;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    position: relative;
-    display: block;
-    margin: 0 auto 20px; /* Center and add margin to stack vertically */
-    box-shadow: inset 2px 2px 2px 0px rgba(255, 255, 255, .5),
-        7px 7px 20px 0px rgba(0, 0, 0, .1),
-        4px 4px 5px 0px rgba(0, 0, 0, .1);
-    outline: none;
+  width: 130px;
+  height: 40px;
+  color: #050505;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.4s ease-out;
+  position: relative;
+  display: block;
+  margin: 0 auto 20px; /* Center and add margin to stack vertically */
+  outline: none;
+}
+
+.btn-1 {
+  box-shadow: insert 0 0 0 0 #180e2a;
+  background: linear-gradient(#1fd1f9 0%, #b621fe 74%);
+}
+
+.btn-1:hover {
+  box-shadow: inset 150px 0 0 0 #2b1c48;
+  cursor: pointer;
+  color: #eeefed;
+}
+
+.btn-2 {
+  box-shadow: 3px 3px 0 0 rgb(82, 4, 4);
+}
+
+.btn-2:hover {
+  box-shadow: 1px 1px 1px 1px;
+  background: rgb(243, 11, 11);
+  transform: translate(3px, 3px);
+}
+
+.btn-3:hover {
+  color: #121311;
+  background: #09ed0d;
+  transform: scale(1.2, 1.2);
+  opacity: 0.5;
 }
 
 /* Add your custom styles for btn-1, btn-2, and btn-3 */
