--- a/style.css
+++ b/style.css
@@ -68,9 +68,13 @@ p {
   transform: translate(3px, 3px);
 }
 
+.btn-3 {
+  background: #0aba0d;
+}
+
 .btn-3:hover {
   color: #121311;
-  background: #09ed0d;
+  background: #0aba0d;
   transform: scale(1.2, 1.2);
   opacity: 0.5;
 }
